syntax = "proto3";

package proto.v1;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/untea/bottom_babruysk/internal/transport/gen/proto/v1;protov1";

service AlbumsService {
  rpc CreateAlbum(CreateAlbumRequest) returns (CreateAlbumResponse);
  rpc GetAlbum(GetAlbumRequest) returns (GetAlbumResponse);
  rpc ListAlbums(ListAlbumsRequest) returns (ListAlbumsResponse);
  rpc UpdateAlbum(UpdateAlbumRequest) returns (UpdateAlbumResponse);
  rpc DeleteAlbum(DeleteAlbumRequest) returns (DeleteAlbumResponse);
}

message Album {
  string id = 1;
  string owner_id = 2;
  string title = 3;
  string description = 4;
  google.protobuf.Timestamp release_date = 5;
  google.protobuf.Timestamp created_at = 6;
  google.protobuf.Timestamp updated_at = 7;
}

message CreateAlbumRequest {
  string owner_id = 1;
  string title = 2;
  string description = 3;
  google.protobuf.Timestamp release_date = 4;
}

message CreateAlbumResponse {
  string id = 1;
}

message GetAlbumRequest {
  string id = 1;
}

message GetAlbumResponse {
  Album album = 1;
}

message ListAlbumsRequest {
  uint32 limit = 1;
  uint32 offset = 2;
  string sort_field = 3;
  string sort_order = 4;
}
message ListAlbumsResponse {
  repeated Album albums = 1;
}

message UpdateAlbumRequest {
  string id = 1;
  optional string title = 2;
  optional string description = 3;
  optional google.protobuf.Timestamp release_date = 4;
}

message UpdateAlbumResponse {}

message DeleteAlbumRequest {
  string id = 1;
}

message DeleteAlbumResponse {}
